docs: Scoped Values and ThreadLocal Migration chapter (T-412), closing genuine concurrency gap
Continued the Master Topic Register survey against current repo content:
grep confirmed ScopedValue had zero coverage anywhere. Verified real
version status before writing: javac on this repo's own JDK confirms it's
a genuine preview API (JEP 446), stated precisely and kept distinct from
StructuredTaskScope's JEP 453. Picked T-412 (IWI 4.5) as the next
highest-impact gap.

New chapter:
handbook/concurrency/scoped-values-and-threadlocal-migration.md, backed by
three real demos in
practice/java/concurrency/scoped-values-and-threadlocal/ (--enable-preview,
OpenJDK 21.0.12):

- ScopedValueBasicsDemo: real NoSuchElementException when read unbound,
  real visibility inside run()'s dynamic extent (including from a nested
  method call), real return to unbound state the instant run() returns,
  and real, correct nested-scope shadowing/restoration.
- ThreadLocalLeakDemo: on a real single-thread pool forcing physical
  thread reuse, a ThreadLocal set by Task 1 and never remove()'d was
  genuinely still visible to an unrelated Task 2 on the same reused
  thread -- a real, reproduced leak. The identical scenario with
  ScopedValue showed isBound() == false for Task 2 -- real, structural
  immunity, since there's no cleanup step to forget.
- InheritanceComparisonDemo: a ThreadLocal set on the main thread was
  genuinely null on a manually-created child Thread; a ScopedValue bound
  on the parent was genuinely visible inside a real StructuredTaskScope
  subtask forked from within that binding.

Cross-linked to virtual-threads.md and structured-concurrency.md (both
prerequisites, forward links added to both).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>